Thêm chức năng  cho phép sửa chỉ số công tơ khi đối soát. chưa test

--- a/app/src/main/res/layout/row_tththn_upload.xml
+++ b/app/src/main/res/layout/row_tththn_upload.xml
@@ -130,12 +130,13 @@
                         android:orientation="horizontal">
 
                         <ImageView
+                            android:src="@color/tththn_text_less_black"
                             android:id="@+id/iv_doisoat_cto_thao"
                             android:layout_width="@dimen/_150sdp"
                             android:layout_height="match_parent"
                             android:background="@drawable/xml_tththn_rectangle6"
                             android:padding="@dimen/_5sdp"
-                            tools:visibility="gone" />
+                            tools:visibility="visible" />
 
 
                         <LinearLayout
@@ -143,9 +144,18 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/_5sdp"
                             android:layout_toRightOf="@+id/iv_doisoat_cto_thao"
-                            android:layout_weight="5"
+                            android:layout_weight="6"
                             android:orientation="vertical"
-                            tools:visibility="gone">
+                            tools:visibility="visible">
+
+                            <Button
+                                android:visibility="visible"
+                                android:id="@+id/btn_edit_doisoat_thao"
+                                style="@style/buttonStyle4"
+                                android:text="CHỈNH SỬA"
+                                android:layout_marginBottom="@dimen/_2sdp"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/_24sdp" />
 
                             <RelativeLayout
                                 android:id="@+id/rl_41"
@@ -312,13 +322,13 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/_5sdp"
-                            android:layout_weight="5"
+                            android:layout_weight="6"
                             android:orientation="vertical"
                             tools:visibility="visible">
 
 
                             <Button
-                                android:visibility="gone"
+                                android:visibility="visible"
                                 android:id="@+id/btn_edit_doisoat_treo"
                                 style="@style/buttonStyle4"
                                 android:text="CHỈNH SỬA"
