--- a/app/src/main/res/layout/fragment_ttht_hn_dong_bo.xml
+++ b/app/src/main/res/layout/fragment_ttht_hn_dong_bo.xml
@@ -94,7 +94,7 @@
                 style="@style/textStyle2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:text="Cập nhật dữ liệu"
                 android:textStyle="normal" />
