--- a/app/src/main/res/layout/fragment_ttht_hn_bban_tuti.xml
+++ b/app/src/main/res/layout/fragment_ttht_hn_bban_tuti.xml
@@ -7,9 +7,9 @@
 
     <RelativeLayout
         android:id="@+id/rl_v1"
-        android:background="@color/text_white"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/text_white">
 
         <ScrollView
             android:id="@+id/scrollv_chitiet_tuti"
@@ -35,7 +35,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_5sdp"
-                    tools:visibility="visible">
+                    tools:visibility="gone">
 
                     <TextView
                         android:id="@+id/tv_1"
@@ -60,7 +60,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_5sdp"
-                    tools:visibility="visible">
+                    tools:visibility="gone">
 
                     <TextView
                         android:id="@+id/tv_2a"
@@ -84,7 +84,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="@dimen/_5sdp"
-                    tools:visibility="visible">
+                    tools:visibility="gone">
 
                     <TextView
                         android:id="@+id/tv_3a"
@@ -108,7 +108,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_5sdp"
-                    tools:visibility="visible">
+                    tools:visibility="gone">
 
                     <TextView
                         android:id="@+id/tv_4a"
@@ -133,7 +133,7 @@
                     android:layout_marginTop="@dimen/_5sdp"
                     android:orientation="horizontal"
                     android:weightSum="2"
-                    tools:visibility="visible">
+                    tools:visibility="gone">
 
                     <RelativeLayout
                         android:id="@+id/rl_5"
@@ -165,7 +165,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_5sdp"
                         android:layout_marginLeft="@dimen/_10sdp"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:visibility="gone">
 
                         <TextView
                             android:id="@+id/tv_6a"
@@ -194,6 +195,33 @@
                     android:layout_height="wrap_content" />
 
                 <!--Tu thao-->
+
+                <!-- <RelativeLayout
+                     android:id="@+id/rl_7"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_marginBottom="@dimen/_5sdp"
+                     android:layout_marginTop="@dimen/_10sdp"
+                     tools:visibility="visible">
+
+                     <TextView
+                         android:id="@+id/tv_7"
+                         style="@style/textStyle3"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="Thông tin TU Tháo" />
+
+                     <View
+                         android:id="@+id/v_1a"
+                         android:layout_width="match_parent"
+                         android:layout_height="1dp"
+                         android:layout_centerVertical="true"
+                         android:layout_marginLeft="@dimen/_5sdp"
+                         android:layout_toRightOf="@+id/tv_7"
+                         android:background="@color/tththn_text_more_less_black" />
+                 </RelativeLayout>-->
+
+
                 <RelativeLayout
                     android:id="@+id/rl_7"
                     android:layout_width="match_parent"
@@ -207,7 +235,16 @@
                         style="@style/textStyle3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Thông tin TU Tháo" />
+                        android:text="Tháo TU TI Tháo" />
+
+                    <Button
+                        android:id="@+id/bt_add_tuti_thao"
+                        style="@style/buttonStyle1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/_24sdp"
+                        android:layout_alignParentRight="true"
+                        android:drawableRight="@drawable/ic_add"
+                        android:text="Thêm TU TI Tháo" />
 
                     <View
                         android:id="@+id/v_1a"
@@ -215,9 +252,16 @@
                         android:layout_height="1dp"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginRight="@dimen/_2sdp"
+                        android:layout_toLeftOf="@+id/bt_add_tuti_thao"
                         android:layout_toRightOf="@+id/tv_7"
                         android:background="@color/tththn_text_more_less_black" />
                 </RelativeLayout>
+
+
+
+                <include tools:layout="@layout/ttht_include_tuti" />
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -1833,7 +1877,6 @@
                             android:text="Dòng điện (A)" />
 
                         <EditText
-                            android:inputType="numberDecimal"
                             android:id="@+id/et_9b_dongdien_saulap"
                             style="@style/edittextStyle2"
                             android:layout_width="match_parent"
@@ -1841,6 +1884,7 @@
                             android:layout_alignParentBottom="true"
                             android:layout_below="@+id/tv_9a_dongdien_saulap"
                             android:gravity="bottom"
+                            android:inputType="numberDecimal"
                             tools:text="s" />
                     </RelativeLayout>
 
@@ -1861,7 +1905,6 @@
 
 
                         <EditText
-                            android:inputType="numberDecimal"
                             android:id="@+id/et_9b_dienap_saulap"
                             style="@style/edittextStyle2"
                             android:layout_width="match_parent"
@@ -1869,6 +1912,7 @@
                             android:layout_alignParentBottom="true"
                             android:layout_below="@+id/tv_10a_dienap_saulap"
                             android:gravity="bottom"
+                            android:inputType="numberDecimal"
                             tools:text="s" />
 
                     </RelativeLayout>
@@ -1890,7 +1934,6 @@
 
 
                         <EditText
-                            android:inputType="numberDecimal"
                             android:id="@+id/et_9b_hesok_saulap"
                             style="@style/edittextStyle2"
                             android:layout_width="match_parent"
@@ -1898,6 +1941,7 @@
                             android:layout_alignParentBottom="true"
                             android:layout_below="@+id/tv_10a_hesok_saulap"
                             android:gravity="bottom"
+                            android:inputType="numberDecimal"
                             tools:text="s" />
 
                     </RelativeLayout>
@@ -1957,7 +2001,6 @@
 
 
                         <EditText
-                            android:inputType="number"
                             android:id="@+id/et_9b_chisotongP_saulap"
                             style="@style/edittextStyle2"
                             android:layout_width="match_parent"
@@ -1965,6 +2008,7 @@
                             android:layout_alignParentBottom="true"
                             android:layout_below="@+id/tv_10a_chisotongP_saulap"
                             android:gravity="bottom"
+                            android:inputType="number"
                             tools:text="s" />
 
                     </RelativeLayout>
@@ -1986,7 +2030,6 @@
 
 
                         <EditText
-                            android:inputType="number"
                             android:id="@+id/et_9b_chisotongQ_saulap"
                             style="@style/edittextStyle2"
                             android:layout_width="match_parent"
@@ -1994,6 +2037,7 @@
                             android:layout_alignParentBottom="true"
                             android:layout_below="@+id/tv_10a_chisotongQ_saulap"
                             android:gravity="bottom"
+                            android:inputType="number"
                             tools:text="s" />
 
                     </RelativeLayout>
@@ -2023,7 +2067,6 @@
                             android:text="BT" />
 
                         <EditText
-                            android:inputType="number"
                             android:id="@+id/et_9b_bt_saulap"
                             style="@style/edittextStyle2"
                             android:layout_width="match_parent"
@@ -2031,6 +2074,7 @@
                             android:layout_alignParentBottom="true"
                             android:layout_below="@+id/tv_9a_bt_saulap"
                             android:gravity="bottom"
+                            android:inputType="number"
                             tools:text="s" />
                     </RelativeLayout>
 
@@ -2051,7 +2095,6 @@
 
 
                         <EditText
-                            android:inputType="number"
                             android:id="@+id/et_9b_cd_saulap"
                             style="@style/edittextStyle2"
                             android:layout_width="match_parent"
@@ -2059,6 +2102,7 @@
                             android:layout_alignParentBottom="true"
                             android:layout_below="@+id/tv_10a_cd_saulap"
                             android:gravity="bottom"
+                            android:inputType="number"
                             tools:text="s" />
 
                     </RelativeLayout>
@@ -2176,7 +2220,6 @@
 
 
                         <EditText
-                            android:inputType="number"
                             android:id="@+id/et_9b_hesonhan_saulap"
                             style="@style/edittextStyle2"
                             android:layout_width="match_parent"
@@ -2184,6 +2227,7 @@
                             android:layout_alignParentBottom="true"
                             android:layout_below="@+id/tv_10a_hesonhan_saulap"
                             android:gravity="bottom"
+                            android:inputType="number"
                             tools:text="s" />
 
                     </RelativeLayout>
@@ -2275,15 +2319,14 @@
             android:weightSum="3">
 
 
-
             <ImageButton
-                android:background="@drawable/xml_tththn_rectangle11"
                 android:id="@+id/ibtn_ghi_bbantuti"
                 style="@style/buttonStyle_menu_bottom"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/_1sdp"
                 android:layout_weight="1"
+                android:background="@drawable/xml_tththn_rectangle11"
                 android:src="@drawable/ic_tththn_edit_2" />
 
 
